# ckb-dao-vote

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yaml
contracts/ckb-dao-vote/: Cargo.toml  Makefile  README.md  build.rs
contracts/ckb-dao-vote/molecules/: ckb.mol  vote.mol
contracts/ckb-dao-vote/src/: entry.rs  error.rs  main.rs  molecules.rs  smt_hasher.rs
contracts/ckb-dao-vote/src/molecules/: ckb.rs  vote.rs
deployment/testnet/: deployment.toml
deployment/testnet/migrations/: 2025-09-17-092354.json
docs/: ckb-dao-vote.md
scripts/: find_clang
tests/: Cargo.toml
tests/src/: lib.rs  molecules.rs  smt_hasher.rs  tests.rs
