[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[features]
native-simulator = [ "ckb-testtool/native-simulator" ]

[dependencies]
ckb-testtool = "0.16.0"
serde_json = "1.0"
molecule = { version = "0.9.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_molecule = "1.1.2"
sparse-merkle-tree = "0.6.1"